# File-Organizer

./: .gitignore  CMakeLists.txt  README.md  file_functions.c  file_organizer.c  file_organizer.py  list_functions.c  list_functions.h
include/: constants.h  errorLogging.h  list_functions.h
src/: file_functions.c  file_functions.h  file_organizer.c  list_functions.c  list_functions.h  sorcerers-stash.c
utils/: errorLog.txt  errorLogging.c
